This task is to gather things needed to make user32/winsrv/win32k initialization Win2k3-compatible.
And also to fix the creation of the win32 system threads
- is blocked by
-
CORE-10559 User32 does not support re-initialization
-
- Open
-
- relates to
-
CORE-7505 Patch for basesrv etc
-
- Open
-
-
CORE-5138 csrss: fix Win32k Initialisation bugs
-
- Resolved
-
-
CORE-9346 The console server should open consoles to the correct desktops
-
- Resolved
-
-
CORE-10217 Terminate win32k RawInputThread on shutdown
-
- Resolved
-